Bug 64401 - CONDITIONAL FORMATTING: Icon Set - Formulas are not visible
Summary: CONDITIONAL FORMATTING: Icon Set - Formulas are not visible
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.0.2.2 release
Hardware: Other Windows (All)
: medium normal
Assignee: Markus Mohrhard
URL:
Whiteboard: target:4.2.0 target:7.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2013-05-09 20:14 UTC by Michel Rudelle
Modified: 2021-02-26 19:21 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
viewing the lack of formulas (66.18 KB, image/jpeg)
2013-05-09 20:14 UTC, Michel Rudelle
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michel Rudelle 2013-05-09 20:14:43 UTC
Created attachment 79062 [details]
viewing the lack of formulas

Steps to reproduce:
 - Open a new spreadsheet
 - Enter values as shown in attached screen shot
 - Apply a Conditional Formatting in the range A1:A10
     Icon Set - 3 Arrows
     Select "formula" for both thresholds and enter:
        =B4 in the 1st one
        =B5 in the 2nd
     Ok Ok

When changing values in cells B4 and B5, arrows are properly modified, but:
 - only after Ctrl+Shift+F9
 - when returning in CF with Manage, formulas are no more displayed (as you can see on the screen shot) and then:
    - leaving CF Manage by Cancel preserves the formulas
    - leaving CF Manage by Ok causes the loss of formulas
Formulas are not lost when saving the file

Version 4.0.2.2 (Build ID: 4c82dcdd6efcd48b1d8bba66bfe1989deee49c3)
Version 4.0.3.3 (Build ID: 0eaa50a932c8f2199a615e1eb30f7ac74279539)
Vista-32b
Comment 1 Jacques Guilleron 2013-05-10 06:53:37 UTC
Hello Michel,

I reproduce this behavior with LO 4.0.2.2, Windows 7 Home Premium. So i set Status to NEW.

Have a nice day,

Jacques Guilleron
Comment 2 pierre-yves samyn 2013-05-10 08:30:41 UTC
Hello

some more details...

I reproduce the bug via Conditional Formatting> Manage> Edit
but not if I select the range and then use Conditional Formatting> Condition

Tested with Windows 7 64bits and
Version 4.0.3.3 (Build ID: 0eaa50a932c8f2199a615e1eb30f7ac74279539)

Regards
Pierre-Yves
Comment 3 Markus Mohrhard 2013-06-27 18:59:43 UTC
I don't see the problem with the missing formulas in master any more.

I'll have a look at the updating problem.
Comment 4 Michel Rudelle 2013-06-27 19:42:32 UTC
Hi Markus,
Indeed, this bug is still present in:
Version 4.0.4.2 (Build ID: 9e9821abd0ffdbc09cd8c52eaa574fa09eb08f2)

But NOT in:
Version: 4.1.0.0.beta2 Build ID: 33224f4f11a05cfad2249e812fcc2975fbb61f6
Version: 4.2.0.0.alpha0+ Build ID: 7746de6e42d5957fa62fa278e2c46a0cb472dc01

all tested with Vista-32b)
Regards
Comment 5 Markus Mohrhard 2013-06-28 21:33:45 UTC
Managed to fix the problem that changing the value in referenced cells did not result in a direct update. This was also a problem for data bars and color scales and required me to implement a new updating mechanism for these formats.
Comment 6 Commit Notification 2013-06-28 22:22:09 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=17cb1d6d82db56761c86ee95195689cc155901b3

allow these cond formats to be updated when formula val changes,fdo#64401



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Michel Rudelle 2013-06-29 11:48:35 UTC
Updating values based on formulas is OK with today master (master~2013-06-29):
Version: 4.2.0.0.alpha0+ Build ID: 5b9bad7482a98f2d0d37c4b75a13292abe653ea3 [Vista-32b]
Tests were performed on icon set, data bar and color scales
Thanks
Comment 8 pierre-yves samyn 2013-10-31 08:24:17 UTC
Hello

WORKSFORME on Windows 7/64 with Version: 4.2.0.0.alpha0+
Build ID: cc2a405915e82c4b332dd25457f76704dc536d7f
TinderBox: Win-x86@39, Branch:master, Time: 2013-10-15_15:51:52

Thank you
Pierre-Yves
Comment 9 sophie 2013-11-05 11:08:41 UTC
Closing this one as it has been confirmed to be fixed :) Sophie
Comment 10 Markus Mohrhard 2013-11-05 13:43:04 UTC
(In reply to comment #9)
> Closing this one as it has been confirmed to be fixed :) Sophie

Please don't close my bugs. It is a reminder for me to look into backporting the patch to 4-1. There are several other open bugs from me where I need to look into back porting.
Comment 11 sophie 2013-11-05 13:45:39 UTC
(In reply to comment #10)
> (In reply to comment #9)
> > Closing this one as it has been confirmed to be fixed :) Sophie
> 
> Please don't close my bugs. It is a reminder for me to look into backporting
> the patch to 4-1. There are several other open bugs from me where I need to
> look into back porting.
Ok, noted, sorry for that, I won't touch them. Sophie
Comment 12 Commit Notification 2021-02-26 19:21:59 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0efaa25ddfa84aa3fee88a357ff15f5ec50b234a

tdf#64401: sc_subsequent_filters: Add unittest

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.